[gd_scene load_steps=47 format=3 uid="uid://cw2vmyud5x2"]

[ext_resource type="Script" uid="uid://is4fj30aliwi" path="res://Enemies/BasicEnemy.gd" id="1_1fowp"]
[ext_resource type="Texture2D" uid="uid://bknmw8lksych6" path="res://S_Walk.png" id="2_3wrki"]
[ext_resource type="Texture2D" uid="uid://dxqwdfitrhv5j" path="res://S_Attack.png" id="2_22l5n"]
[ext_resource type="Texture2D" uid="uid://y5ca2ljgexpg" path="res://D_Walk.png" id="2_t68yt"]
[ext_resource type="Texture2D" uid="uid://db7h7pgtc6r2h" path="res://D_Attack.png" id="2_tc3pu"]
[ext_resource type="Texture2D" uid="uid://bbt7ajdw60hgl" path="res://U_Attack.png" id="4_ct2de"]
[ext_resource type="Texture2D" uid="uid://cdqgk7lcfqhv3" path="res://U_Walk.png" id="4_yhmlg"]

[sub_resource type="CircleShape2D" id="CircleShape2D_t68yt"]
radius = 50.0

[sub_resource type="AtlasTexture" id="AtlasTexture_artel"]
atlas = ExtResource("2_tc3pu")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mc61a"]
atlas = ExtResource("2_tc3pu")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tq7r7"]
atlas = ExtResource("2_tc3pu")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3jvj0"]
atlas = ExtResource("2_tc3pu")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_f28oc"]
atlas = ExtResource("2_tc3pu")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6qf6a"]
atlas = ExtResource("2_tc3pu")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1i2vd"]
atlas = ExtResource("2_22l5n")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tc3pu"]
atlas = ExtResource("2_22l5n")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ct2de"]
atlas = ExtResource("2_22l5n")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pae7c"]
atlas = ExtResource("2_22l5n")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_aiv3e"]
atlas = ExtResource("2_22l5n")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_g5hkj"]
atlas = ExtResource("2_22l5n")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6yrmc"]
atlas = ExtResource("4_ct2de")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xqge8"]
atlas = ExtResource("4_ct2de")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_u8q4s"]
atlas = ExtResource("4_ct2de")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hitql"]
atlas = ExtResource("4_ct2de")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4w3te"]
atlas = ExtResource("4_ct2de")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_akfii"]
atlas = ExtResource("4_ct2de")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_oklc3"]
atlas = ExtResource("2_t68yt")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1cnvr"]
atlas = ExtResource("2_t68yt")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8kjeb"]
atlas = ExtResource("2_t68yt")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_epbun"]
atlas = ExtResource("2_t68yt")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jyrmu"]
atlas = ExtResource("2_t68yt")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ixq8l"]
atlas = ExtResource("2_t68yt")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xbk2"]
atlas = ExtResource("2_3wrki")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_t68yt"]
atlas = ExtResource("2_3wrki")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yhmlg"]
atlas = ExtResource("2_3wrki")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6fv04"]
atlas = ExtResource("2_3wrki")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_s3sw0"]
atlas = ExtResource("2_3wrki")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hr8p"]
atlas = ExtResource("2_3wrki")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_uc73c"]
atlas = ExtResource("4_yhmlg")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vtxn3"]
atlas = ExtResource("4_yhmlg")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gj2ft"]
atlas = ExtResource("4_yhmlg")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_txxxo"]
atlas = ExtResource("4_yhmlg")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fv814"]
atlas = ExtResource("4_yhmlg")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0wev"]
atlas = ExtResource("4_yhmlg")
region = Rect2(240, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_oklc3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_artel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mc61a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tq7r7")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_3jvj0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f28oc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6qf6a")
}],
"loop": false,
"name": &"AttackD",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1i2vd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tc3pu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ct2de")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_pae7c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aiv3e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g5hkj")
}],
"loop": false,
"name": &"AttackLR",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6yrmc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xqge8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u8q4s")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_hitql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4w3te")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_akfii")
}],
"loop": false,
"name": &"AttackU",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oklc3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1cnvr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8kjeb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_epbun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jyrmu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ixq8l")
}],
"loop": true,
"name": &"RunD",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xbk2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t68yt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yhmlg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6fv04")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s3sw0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hr8p")
}],
"loop": true,
"name": &"RunLR",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uc73c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vtxn3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gj2ft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_txxxo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fv814")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0wev")
}],
"loop": true,
"name": &"RunU",
"speed": 15.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_4bxyu"]
radius = 69.0072

[node name="CharacterBody2D" type="CharacterBody2D"]
z_index = 5
position = Vector2(-158, 100)
script = ExtResource("1_1fowp")
metadata/Difficulty = 0.0
metadata/Health = 100.0
metadata/Fire = false
metadata/Electric = false
metadata/Fast = false
metadata/Tanky = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, -1)
shape = SubResource("CircleShape2D_t68yt")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true
radius = 5.0
debug_enabled = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -7)
scale = Vector2(3, 3.065)
sprite_frames = SubResource("SpriteFrames_oklc3")
animation = &"AttackD"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_4bxyu")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_right = 40.0
offset_bottom = 40.0
text = "fefererefere"

[node name="AttackTimer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
